[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/map_in_tree.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/pirate_girl.png" type="Texture" id=2]
[ext_resource path="res://assets/pirate_red.png" type="Texture" id=3]
[ext_resource path="res://assets/pirate_blue.png" type="Texture" id=4]
[ext_resource path="res://MapInTree.gd" type="Script" id=5]
[ext_resource path="res://assets/parrot.png" type="Texture" id=6]
[ext_resource path="res://VoicesMapInTree.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/richard/Richard-12.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/simon/Simon-08-CeSeVedeInVarf.wav" type="AudioStream" id=9]
[ext_resource path="res://Pirate.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PirateRed:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -690.674, -3.58698 ), Vector2( -308.836, -12.0723 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PirateBlue:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -571.239, -89.5627 ), Vector2( -189.401, -98.048 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PirateGirl:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -679.19, -37.4757 ), Vector2( -297.353, -45.961 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Parrot:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -148.456, 295.973 ), Vector2( 275.808, 259.203 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Move2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PirateRed:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -308.836, -12.0723 ), Vector2( 81.4867, -125.209 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PirateBlue:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -189.401, -98.048 ), Vector2( 34.0447, -214.014 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PirateGirl:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -297.353, -45.961 ), Vector2( 15.1884, -163.341 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PirateRed:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.18884, 0.168363 ), Vector2( 0.076247, 0.0593126 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PirateBlue:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.17864, 0.171665 ), Vector2( 0.0884696, 0.079638 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PirateGirl:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.146446, 0.149545 ), Vector2( 0.0732616, 0.0570718 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Parrot:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 275.808, 259.203 ), Vector2( 506.547, 314.641 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Parrot:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.239492, 0.253915 ), Vector2( -0.0969708, 0.110963 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "MoveToMap"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Parrot:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 275.808, 259.203 ), Vector2( 709.972, 59.7993 ) ]
}

[node name="MapInTree" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 2496.0
margin_bottom = 1451.0
rect_scale = Vector2( 0.411453, 0.416472 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PirateRed" type="TextureButton" parent="."]
margin_left = -308.836
margin_top = -12.0723
margin_right = 477.166
margin_bottom = 1017.93
rect_scale = Vector2( 0.18884, 0.168363 )
rect_pivot_offset = Vector2( 373.811, 517.926 )
texture_normal = ExtResource( 3 )

[node name="PirateBlue" type="TextureButton" parent="."]
margin_left = -189.401
margin_top = -98.048
margin_right = 767.599
margin_bottom = 961.952
rect_scale = Vector2( 0.17864, 0.171665 )
rect_pivot_offset = Vector2( 483.133, 617.374 )
texture_normal = ExtResource( 4 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PirateGirl" type="TextureButton" parent="."]
margin_left = -297.353
margin_top = -45.961
margin_right = 659.647
margin_bottom = 1014.04
rect_scale = Vector2( 0.146446, 0.149545 )
rect_pivot_offset = Vector2( 477.248, 561.536 )
texture_normal = ExtResource( 2 )

[node name="Parrot" type="TextureButton" parent="."]
margin_left = 275.808
margin_top = 259.203
margin_right = 769.808
margin_bottom = 657.204
rect_scale = Vector2( -0.239492, 0.253915 )
texture_normal = ExtResource( 6 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayerCharacterMoving" type="AnimationPlayer" parent="."]
anims/Move = SubResource( 1 )
anims/Move2 = SubResource( 2 )

[node name="AnimationPlayerParrot" type="AnimationPlayer" parent="."]
anims/MoveToMap = SubResource( 3 )

[node name="Voices" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Richard" type="Node2D" parent="Voices"]

[node name="RichardVoice12" type="AudioStreamPlayer" parent="Voices/Richard"]
stream = ExtResource( 8 )
volume_db = 8.0

[node name="Simon" type="Node2D" parent="Voices"]

[node name="SimonVoice8" type="AudioStreamPlayer" parent="Voices/Simon"]
stream = ExtResource( 9 )
[connection signal="animation_finished" from="AnimationPlayerCharacterMoving" to="." method="_on_AnimationPlayerCharacterMoving_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayerParrot" to="." method="_on_AnimationPlayerParrot_animation_finished"]
